@@ -1,7 +1,7 @@
 
 - better documentation for text methods (add_code, code_get, code_put, ...)
 
-- documentation for ARice and BLVec
+- documentation for BLVec
 
 - tests for consistent die return strings
   x read unary off end of stream
@@ -25,8 +25,6 @@
 
 - tie to a file to avoid holding everything in memory.
   Either File::Map or PerlIO :mmap or Sys::Mmap
-
-- ARice: use reference for parameter k.
 
 - Better documentation for Additive.
 
